--- a/src/LoftTaxi.sass
+++ b/src/LoftTaxi.sass
@@ -34,8 +34,29 @@ html, body, #root, section, main
         -webkit-user-select: none
         user-select: none
 
+#map, .auth__section
+    background-image: url("/assets/auth-image.jpg")
+
+    nav
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-between
+        background:#1C1A19
+        padding: 15px 20px
+
+        div
+            display: flex
+            width: 230px
+            flex-flow: row nowrap
+            align-items: center
+            justify-content: space-between
+            margin-right: 40px
+
+            span
+                color: #FFFFFF
+                cursor: pointer
+
 .auth__section
-    background-image: url("./assets/auth-image.jpg")
     background-size: cover
     height: 100%
     width: 66%
@@ -85,10 +106,8 @@ label
     &:not([value=""]) + label
          transform: translateY(-31px) translateX(-34px) scale(0.8) !important
 
-.loft__form-button
+.loft__form-button, .loft__form-button-filled
     font-size: 20px
-    background-color: #D8D7D5
-    color: #737373
     margin-top: 30px
     padding: 12px 15px
     border-radius: 40px
@@ -102,13 +121,19 @@ label
         a
             color: rgb(253, 191, 90)
             text-decoration: none
+            cursor: pointer
+        
 
-    &-filled
-        background: #FDBF5A
-        color: black
+    &:focus
+        background: #FFA842
 
-        &:focus
-            background: #FFA842
+.loft__form-button-filled
+    background: #FDBF5A
+    color: black
+
+.loft__form-button
+    background-color: #D8D7D5
+    color: #737373
 
 .loft__form-anchor
     text-align: center
