--- a/src/LoftTaxi.sass
+++ b/src/LoftTaxi.sass
@@ -6,14 +6,14 @@
     display: flex
     flex-flow: row nowrap
 
-body
+body, pre
     margin: 0
     font-family: Lora
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
 
 *
-    outline: none
+    outline: none !important
 
 code 
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
@@ -45,6 +45,13 @@ h2
 #loginPage
     +flexrow
 
+input:focus
+    border-top: none !important
+    border-left: none !important
+    border-right: none !important
+    outline: none !important
+    box-shadow: none !important
+
 #map, .auth__section
     background-image: url("/assets/auth-image.jpg")
 
@@ -73,7 +80,7 @@ h2
     align-items: center
     justify-content: center
 
-.authorize__block
+.authorize__block, #profile__container
     background: white
     padding: 46px 0
     box-shadow: 0px 0px 40px 6px rgba(0, 0, 0, 0.1)
@@ -107,12 +114,14 @@ label
     font-size: 16px
     margin-top: 20px
 
-    &:focus + label
+    &:focus + label, &:not([value=""]) + label
         transform: translateY(-31px) translateX(-34px) scale(0.8)
         transition: transform 200ms ease-out
 
-    &:not([value=""]) + label
-         transform: translateY(-31px) translateX(-34px) scale(0.8) !important
+    &:focus + .short-label, &:not([value=""]) + .short-label
+        transform: translateY(-31px) translateX(-15px) scale(0.8) !important
+        transition: transform 200ms ease-out
+
 
 .loft__form-button, .loft__form-button-filled
     font-size: 20px
@@ -143,6 +152,17 @@ label
     background-color: #D8D7D5
     color: #737373
 
+.hint
+    color: #7B7B7B
+    text-align: center
+    margin-bottom: 45px
+
+    &+div
+        +flexrow
+
+    &+.loft__form-button-expanded
+        margin-left: 19%
+
 .loft__form-anchor
     text-align: center
     width: 350px
@@ -152,6 +172,12 @@ label
     width: 100%
     height: 100%
 
+[data-testid=map-wrapper]
+
+    a
+        color: #FFFFFF
+        text-decoration: none
+
 .map
     overflow: hidden
     height: 100%
@@ -159,3 +185,67 @@ label
     bottom: 0
     left: 0
     right: 0
+
+#logout
+    margin-top: 0
+    position: relative
+    left: 20px
+
+#profile__container
+    height: auto
+    width: 685px
+    padding: 46px 20px
+    margin: auto
+    margin-top: 100px
+
+#cvc_container
+    +flexrow
+
+    .loft__form-input
+        width: 137px
+
+    div
+        display: grid
+
+#profile-form
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+
+#card_container
+    padding: 20px 30px
+    box-shadow: 0px 0px 40px 6px rgba(0, 0, 0, 0.1)
+    border-radius: 22px
+    margin-left: 30px
+    margin-top: 15px
+
+    div
+        +flexrow
+        width: 100%
+        justify-content: space-between
+
+        p
+            font-size: 21px
+
+    div:nth-child(1)
+        height: 40px
+
+        p
+            margin: 8px 0 0 0
+
+    div:nth-child(2)
+        margin: 50px 0
+        height: 27px
+        width: 250px
+
+        pre
+            font-size: 21px
+
+.material-icons
+    position: static !important
+
+.loft__form-button-expanded
+    padding-left: 130px
+    padding-right: 130px
+    margin-left: 24%
+    margin-top: 40px
