feat(redux sagas): middlewares were replaced by redux sagas

--- a/src/LoftTaxi.sass
+++ b/src/LoftTaxi.sass
@@ -166,7 +166,7 @@ label
     &+.loft__form-button-expanded
         margin-left: 19%
 
-h4+.loft__form-button-expanded
+.map-wrapper .loft__form-button-expanded, 
     margin: 0 0 0 6%
 
 .loft__form-anchor
